After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683191 - [proxy-volumemonitor] gdbus port broke ability to automount mult-volume devices
[proxy-volumemonitor] gdbus port broke ability to automount mult-volume devices
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: general
1.13.x
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-02 02:12 UTC by Gert Kulyk
Modified: 2012-09-07 17:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch to fix the issue (2.41 KB, patch)
2012-09-02 02:12 UTC, Gert Kulyk
none Details | Review

Description Gert Kulyk 2012-09-02 02:12:12 UTC
Created attachment 223186 [details] [review]
Proposed patch to fix the issue

Automounting devices with multiple volumes doesn't work anymore, this means, only the first volume found gets mounted. While I was trying to find out what was going wrong with another bug, I accidentally found a possible solution for this problem. I'm attaching a patch that fixes the issue for me (but be warned: I'm far away from really understanding the code involved here).
Comment 1 Tomas Bzatek 2012-09-03 15:10:56 UTC
Interesting issue, however the patch seems odd to me, pointers don't change, the only difference is casting.

I can try to reproduce the issue here, if you tell me how. This would hopefully reveal the issue on my machine. What exactly does "automounting" mean in your term? Is that on session startup or is that a automount-autorun after device insertion in a running session?
Comment 2 Gert Kulyk 2012-09-03 18:59:51 UTC
With automounting I mean automount-autorun after device insertion. While before the gdbus port you could insert e.g. an external harddisk with two or more partitions, or an mp3-player with internal and external memory, and both were mounted automatically (or at least the option to mount them was offered through gnome-shell dialouges). Currently only the first partition will mount automatically (or gnome-shell asks only for the first one).

As I said, I don't know why the patch is working, it was created comparing the old (pre-gdbus) and new values.
Comment 3 Tomas Bzatek 2012-09-07 13:38:48 UTC
I've committed a patch based on yours, properly using object casting where appropriate. I still don't see any point why it should change a functionality. Are you sure you're not mixing instances of gvfs from your working tree with system ones?

I've also tested your case, made four FAT partitions on an USB stick and all of them were mounted automatically after insertion.

Could you please test if the commit http://git.gnome.org/browse/gvfs/commit/?id=ff909269ab889e81f83d3c08a7c8b612306b4473 fixes your issue?
Comment 4 Gert Kulyk 2012-09-07 17:56:12 UTC
I did a quick test and the commit seems to work.

And no, the only running gvfs instance was the system one, of course after updates the session was closed and sometimes the system even rebooted before trying it again. Before reporting the bug I did several reboots either with or without a gvfs were the above patch was applied to see if the bug is reproducable (and it always was since 1.13.1) and the patch helps (it always did since 1.13.1). But please don't ask me why it works, I still have no idea.