proxydrive: Use proper object casting

Just a little cleanup to be on a safe side.

https://bugzilla.gnome.org/show_bug.cgi?id=683191